fix: (Form) extra part not aligning properly

--- a/src/components/form/form.less
+++ b/src/components/form/form.less
@@ -9,6 +9,9 @@
     .adm-list.adm-list {
       --prefix-width: 6em;
       --align-items: stretch;
+      .adm-list-item-content-extra {
+        align-self: center;
+      }
     }
   }
   .@{class-prefix-form}-footer {
